force-app/main/default/objects/Key_Players_Influencers__c/Key_Players_Influencers__c.object-meta.xml
<CustomObject>
    <label>3-2-1 Buyer Map</label>
    <nameField>
        <displayFormat>KP-{0000}</displayFormat>
        <label>Key Player ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3-2-1 Buyer Map</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>