force-app/main/default/objects/Key_Players_Influencers__c/fields/Evidence_this_person_is_the_Catalyst__c.field-meta.xml
<CustomField>
    <fullName>Evidence_this_person_is_the_Catalyst__c</fullName>
    <label>Evidence this person is the Catalyst</label>
    <length>255</length>
    <type>Text</type>
</CustomField>