force-app/main/default/objects/Key_Players_Influencers__c/fields/Influence_Level__c.field-meta.xml
<CustomField>
    <fullName>Influence_Level__c</fullName>
    <description>For VVSS: Use this field to identify the contact&apos;s level of support. There should be only one &quot;Catalyst&quot; per deal. This person will be the Primary Contact Role.</description>
    <label>Influence Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catalyst</fullName>
            </value>
            <value>
                <fullName>Influencer Base</fullName>
            </value>
            <value>
                <fullName>Outsider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>