force-app/main/default/objects/Key_Players_Influencers__c/fields/Level_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Contact__c</fullName>
    <description>[Legacy Field] Not critical for VVSS usage. May be used to note the level of engagement if desired.</description>
    <label>Level of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>