force-app/main/default/objects/Key_Players_Influencers__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For VVSS: This field is used to identify the name of the buyer/contact role/key player</description>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>3-2-1 Buyer Map</relationshipLabel>
    <relationshipName>Key_Players</relationshipName>
    <type>Lookup</type>
</CustomField>