force-app/main/default/objects/Key_Players_Influencers__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>For VVSS: Used to associate the buyer to the opportunity. Should auto-populate if created from the opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>3-2-1 Buyer Map</relationshipLabel>
    <relationshipName>Key_Players</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>