force-app/main/default/objects/Key_Players_Influencers__c/fields/RelationshipSupport__c.field-meta.xml
<CustomField>
    <fullName>RelationshipSupport__c</fullName>
    <description>For VVSS</description>
    <label>Relationship Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supporter</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Opponent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>