force-app/main/default/objects/Key_Players_Influencers__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>For VVSS: Used to bring in the Contact&apos;s title from their Contact record</description>
    <formula>Name__r.Title</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>